Fixed overflow in report activity on mobile

--- a/activity_system/public/stylesheets/style.css
+++ b/activity_system/public/stylesheets/style.css
@@ -8,16 +8,15 @@ a {
 
 
 .md-block {
-    margin-bottom: 20px; 
-     
+    margin-bottom: 20px;
 }
 
 .formclass {
-
+    width: 300px;
+    max-width: 300px;
 }
 
 .formrow {
-    
     margin-bottom: 20px; 
 }
 
